2010-03-16  Jb Evain  <jbevain@novell.com>

	* HttpRequestChannel.cs, HttpTransportBindingElement.cs: use
	MOONLIGHT symbol to disambiguate MonoTouch and Moonlight code.

2010-03-09  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpListenerManager.cs : For ASP.NET, use correct GenericIdentity
	  type, and use null password unless we find a chance to get password
	  in ASP.NET HttpContext.

2010-03-03  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpReplyChannel.cs, AspNetReplyChannel.cs, HttpChannelListener.cs,
	  HttpListenerManager.cs : ongoing authentication support. It returns
	  401 as expected, but somehow fails to retrieve user info.

2010-02-10  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpListenerManager.cs : this change (along with HttpListener
	  implementation) somehow fixes basic auth. connection error...

2010-02-10  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeaders.cs : add !NET_2_1.

2010-02-10  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeader.cs, MessageHeaders.cs : add nasty workaround for
	  typed UniqueId output.

2010-02-10  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeader.cs : no need to treat EndpointAddress as a special
	  case here too.

2010-02-10  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeaders.cs : remove duplicate constant.

2010-02-10  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeader.cs, MessageHeaders.cs: MessageHeader does not treat
	  EndpointAddress as a special case. Instead, each MessageHeaders
	  property should convert it to appropriate serializable objects.

	  (Our DataContractSerializer fails to reject EndpointAddress as
	  serializable type, so it's rather a preparation step.)

2010-02-10  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeader.cs, Message.cs : use dictionary string whenever
	  applicable. The binary output on #577139 is getting closer (no
	  idea if it is really about binary output though).

2010-02-10  Atsushi Enomoto  <atsushi@ximian.com>
