@@ -1,3 +1,9 @@
+2010-03-17  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* SvcHttpHandler.cs, AspNetReplyChannel.cs, HttpChannelListener.cs,
+	  HttpListenerManager.cs : refactoring on acquiring SvcHttpHandler
+	  to not raise "not found" error (see bug #573795).
+
 2010-03-16  Jb Evain  <jbevain@novell.com>
 
 	* HttpRequestChannel.cs, HttpTransportBindingElement.cs: use
